api: add status API routes.
