# api/docs/swagger/swagger.json
@@ -324,6 +324,102 @@
                 }
             }
         },
+        "/api/status/all/": {
+            "get": {
+                "description": "This returns the challenges in the status provided, along with their name and last updated time.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "status"
+                ],
+                "summary": "Returns challenge deployment status from the beast database for the challenges which matches the stauts according to filter.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Status type to filter with, if none specified then all",
+                        "name": "filter",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/api.ChallengeStatusResp"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/api.HTTPPlainResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/api.HTTPPlainResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/status/challenge/": {
+            "get": {
+                "description": "Returns challenge deployment status from the beast database, for those challenges which are not present a status value NA is returned.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "status"
+                ],
+                "summary": "Returns challenge deployment status from the beast database.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Name of the challenge",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/api.ChallengeStatusResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/api.HTTPPlainResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/api.HTTPPlainResp"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/": {
             "get": {
                 "description": "Sends challenge for authorization of user",
@@ -412,6 +508,23 @@
                 "message": {
                     "type": "string",
                     "example": "Available Base images."
+                }
+            }
+        },
+        "api.ChallengeStatusResp": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "example": "Web Challenge"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "deployed"
+                },
+                "updated_at": {
+                    "type": "string",
+                    "example": "2018-12-31T22:20:08.948096189+05:30"
                 }
             }
         },
